Fix z-index problem with the sticky logo in the 'About us' section

--- a/css/habiqo_styles.css
+++ b/css/habiqo_styles.css
@@ -249,7 +249,7 @@ progress::-webkit-progress-bar {
         left: 220px;
         height: 450px;
         width: 600px;
-        z-index: 4;
+        z-index: 5;
         background-color: white;
     }
 
@@ -258,7 +258,7 @@ progress::-webkit-progress-bar {
         width: 100%;
         height: 600px;
         margin-top: 240px;
-        z-index: 3;
+        z-index: 4;
     }
 }
 
@@ -345,10 +345,14 @@ progress::-webkit-progress-bar {
 
 .card-img-top {
     width: 80px;
+    height: 80px;
+    margin-bottom: 30px;
     align-self: center;
 }
 
 .card-title {
+    margin: 0;
+    padding: 0;
     color: black;
     text-align: center;
 }
